--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -2,7 +2,7 @@
 
 name="Web"
 platform="Web"
-runnable=true
+runnable=false
 advanced_options=false
 dedicated_server=false
 custom_features=""
@@ -22,15 +22,15 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-variant/extensions_support=false
-variant/thread_support=false
+variant/extensions_support=true
+variant/thread_support=true
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/export_icon=true
-html/custom_html_shell=""
+html/custom_html_shell="res://index.html"
 html/head_include=""
-html/canvas_resize_policy=2
-html/focus_canvas_on_start=true
+html/canvas_resize_policy=1
+html/focus_canvas_on_start=false
 html/experimental_virtual_keyboard=false
 progressive_web_app/enabled=false
 progressive_web_app/ensure_cross_origin_isolation_headers=true
