--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -22,14 +22,14 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-variant/extensions_support=true
-variant/thread_support=true
+variant/extensions_support=false
+variant/thread_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/export_icon=true
 html/custom_html_shell="res://index.html"
 html/head_include=""
-html/canvas_resize_policy=1
+html/canvas_resize_policy=2
 html/focus_canvas_on_start=false
 html/experimental_virtual_keyboard=false
 progressive_web_app/enabled=false
@@ -40,7 +40,7 @@ progressive_web_app/orientation=0
 progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
 progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color(0, 0, 0, 1)
+progressive_web_app/background_color=Color(0.588235, 0.0470588, 0.588235, 1)
 
 [preset.1]
 
